<resources>
    <string name="app_name">TripMaster</string>
    <string name="logo">logo</string>
    <string name="log_in_sign_up">Log in / Sign up</string>
    <string name="easy_trip_planning">Easy Trip Planning</string>
    <string name="tripmaster">Trip Master</string>
    <string name="log_out">Log out</string>
    <string name="my_trips">My Trips</string>
    <string name="search">Search</string>
    <string name="upcoming">Upcoming</string>
    <string name="recent">Recent</string>
    <string name="home">home</string>
    <string name="add">add</string>
    <string name="profile">profile</string>
    <string name="img">img</string>
    <string name="destination_name">Destination name</string>
    <string name="country_name">Country name</string>
    <string name="current_date">Current date</string>
    <string name="login_button">login button</string>
    <string name="add_a_trip">New trip</string>
    <string name="cancel">Cancel</string>
    <string name="event_description">Event Description</string>
    <string name="add_event">Add Event</string>
    <string name="time_picker">Time Picker</string>
    <string name="time">Time</string>
    <string name="delete_event">Delete Event</string>
    <string name="time_hh_mm">Time (HH:MM)</string>
    <string name="select_a_current_date">Select a current date</string>
    <string name="title">Title</string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>
    <string name="add_new_event">Add event</string>
    <string name="finish">Finish</string>
    <string name="file_uploaded">file uploaded</string>
    <string name="back_button_description">Back</string>
    <string name="country">COUNTRY</string>
    <string name="share">share</string>
    <string name="event_type_view">Event type view</string>
    <string name="event_date_view">date</string>
    <string name="date_event">Date event</string>
    <string name="default_web_client_id">965655000628-o1hlllmg6q2ik8eaq7mqsohgbsecq2kf.apps.googleusercontent.com</string>
    <string name="loading">Loading...</string>
    <string name="explore_trips">Explore Trips</string>
    <string name="global">Global</string>
    <string name="average_rating">0.0</string>
    <string name="icon_rating">icon_rating</string>
    <string name="your_rating">Slide for your rating</string>
    <string name="add_rating">add rating</string>
    <string name="average_rating_0">Average rating: 0</string>
    <string name="circle">circle</string>
    <string name="full_name">Full Name</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
    <string name="email">email</string>
    <string name="my_address">My address</string>
    <string name="phone_num">+972123456789</string>
    <string name="bgprofile">bgprofile</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="since_date">since_date</string>
    <string name="made_by">Made by:</string>
    <string name="global_my_trip">My Trips</string>
    <string name="all_public_trips">All public trips</string>
    <string name="my_trips_home">My trips</string>
    <string name="country_hint">Country</string>
    <string name="average">Average</string>
</resources>