<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border"
    android:padding="8dp"

    >

    <ImageView
    android:id="@+id/event_type_icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/share"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:src="@drawable/ic_flight"
    android:padding="4dp" />

    <!-- Event Type and Description -->
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1">

    <!-- Event Date -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/event_type_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_type_view"
            android:textColor="@color/black"
            android:padding="8dp"
        />

    </LinearLayout>

    <TextView
        android:id="@+id/event_date_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_event"
        android:textColor="@color/black"
        android:padding="8dp"
    />

    </LinearLayout>

    <TextView
    android:id="@+id/event_desc_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:text="@string/event_description"
    android:textColor="@color/black"
    android:padding="8dp" />
</LinearLayout>
