<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/trip_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/def_img"
            android:contentDescription="@string/img"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/trip_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/destination_name"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/trip_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/country_name"
            android:layout_marginTop="4dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/trip_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:text="@string/current_date"
            android:textColor="@android:color/black"/>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
