<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/average_rating_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average"
            app:layout_constraintStart_toStartOf="@id/icon_rating"
            app:layout_constraintTop_toTopOf="@id/icon_rating"
            app:layout_constraintEnd_toEndOf="@id/icon_rating"
            android:padding="2dp"
            android:textSize="11sp" />


        <ImageView
            android:id="@+id/icon_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_rating"
            android:src="@drawable/ic_rating"
            android:layout_marginTop="25dp"
            android:layout_marginStart="45dp"
            android:padding="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#E9CD33" />

        <TextView
            android:id="@+id/average_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_rating"
            android:textSize="11sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/icon_rating"
            app:layout_constraintStart_toStartOf="@id/icon_rating"
            app:layout_constraintEnd_toEndOf="@id/icon_rating"
            app:layout_constraintBottom_toBottomOf="@id/icon_rating" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>