<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <!-- Event Type Selection -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Spinner
            android:id="@+id/spinnerEventType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="48dp"
            android:padding="8dp" />

        <!-- Event Description -->
        <EditText
            android:id="@+id/etEventDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:autofillHints=""
            android:minHeight="48dp"
            android:hint="@string/event_description"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true" />


    </LinearLayout>

    <!-- Time Picker and Delete Event -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Time Picker Icon -->
        <ImageView
            android:id="@+id/ivTimePicker"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_time_picker"
            android:contentDescription="@string/time_picker"
            android:padding="8dp" />

        <!-- Time Input EditText -->
        <EditText
            android:id="@+id/etTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:minHeight="48dp"
            android:hint="@string/time"
            android:inputType="datetime"
            android:padding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true" />

        <ImageView
            android:id="@+id/deleteEvent"
            android:layout_width="48dp"
            android:background="?attr/selectableItemBackground"
            android:layout_height="48dp"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/time_picker"
            android:padding="8dp" />

    </LinearLayout>

</LinearLayout>
