<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:id="@+id/upper_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:id="@+id/bg_trip"
            android:background="@drawable/def_img"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_button_description"
                android:backgroundTint="#FFEB3B"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- My Trips -->
            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="25dp"
                android:layout_marginStart="40dp"
                app:layout_constraintStart_toEndOf="@id/back_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_share"
                android:layout_marginTop="18dp"
                android:layout_marginStart="45dp"
                app:layout_constraintStart_toEndOf="@id/back_button"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="15dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RecyclerView for Days -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDays"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/upper_content"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewEvents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/date_event_of_trip"/>

    <!-- RecyclerView for Events -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewDays"
        app:layout_constraintBottom_toTopOf="@id/menu_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:listitem="@layout/view_event_trip" />

    <!--    App bar -->
    <FrameLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
